update sorting method

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>LA TV Shows | Home</title>
+    <title>Your Favorite Car Garage | Home</title>
     <meta name="description" content="A Catalog of Shows Set in Los Angeles">
     <link rel="stylesheet" href="style.css" />
     <script type="text/javascript" src="scripts.js"></script>
@@ -10,19 +10,19 @@
 
 <body>
     <header class="main-header">
-        <h1 class="title">Thong's TV Shows</h1>
+        <h1 class="title">Your Favorite Car Garage</h1>
     </header>
     <div id="card-container">
         
     </div>
     <div class="card" style="display: none;">
         <div class="card-content">
-            <h2>TV Show Title</h2>
-            <img src="" alt="TV Show Poster">
+            <h2>Your Favorite Car Garage</h2>
+            <img src="" alt="Car Picture">
             <ul>
-                <li>Bullet Point 1</li>
-                <li>Bullet Point 2</li>
-                <li>Bullet Point 3</li>
+                <li>Brand</li>
+                <li>Model</li>
+                <li>Color</li>
             </ul>
         </div>
     </div>
